# canopen-demo

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config.toml
co_test/: Cargo.toml  README.md
co_test/examples/: receive_and_expect.rs  schedule.rs
co_test/src/: async_util.rs  emergency_func.rs  heartbeat_func.rs  lib.rs  pdo_func.rs  pdo_object_func.rs  restore_func.rs  sdo_client_func.rs  util.rs
co_test/tests/: eds_test.rs  emergency_test.rs  heartbeat_test.rs  pdo_exp_test.rs  pdo_object_test.rs  pdo_test.rs  restore_test.rs  sdo_test.rs  sdo_test2.rs  simple_test.rs
co_test/tests/fixtures/: demoDevice.eds
co_test/tests/testing/: mod.rs  test_context.rs
crates/canopen/: README.md
examples/: timer.rs
scripts/: clone_repos.sh  run_coverage.sh  send_file_over_uart.py
src/: flash.rs  global_allocator.rs  lib.rs  utils.rs
